--- a/contacto.html
+++ b/contacto.html
@@ -2,9 +2,23 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Monkey Dev - Contacto</title>
+    <link type="text/css" rel="stylesheet"  href="css/style.css">
 </head>
 <body>
+<header>
+    <h1 class="web-title">Monkey Dev</h1>
+    <nav>
+        <a class="btn-nav" href="index.html">Inicio</a>
+        <a class="btn-nav" href="nosotros.html">Nosotros</a>
+        <a class="btn-nav" href="contacto.html">Contacto</a>
+    </nav>
+</header>
+<main>
 
+</main>
+<footer>
+
+</footer>
 </body>
 </html>
