--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Monkey Dev - Desarrollamos tus ideas!</title>
+    <link type="text/css" rel="stylesheet"  href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Monkey Dev</h1>
+        <h1 class="web-title">Monkey Dev</h1>
         <nav>
-            <a class="btn-nav" href="index.html">Home</a>
+            <a class="btn-nav" href="index.html">Inicio</a>
             <a class="btn-nav" href="nosotros.html">Nosotros</a>
             <a class="btn-nav" href="contacto.html">Contacto</a>
         </nav>
