Se diseña sitio.

--- a/contacto.html
+++ b/contacto.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Monkey Dev - Contacto</title>
-    <link type="text/css" rel="stylesheet"  href="css/style.css">
-</head>
-<body>
-<header>
-    <h1 class="web-title">Monkey Dev</h1>
-    <nav>
-        <a class="btn-nav" href="index.html">Inicio</a>
-        <a class="btn-nav" href="nosotros.html">Nosotros</a>
-        <a class="btn-nav" href="contacto.html">Contacto</a>
-    </nav>
-</header>
-<main>
-
-</main>
-<footer>
-
-</footer>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Monkey Dev - Contacto</title>
+        <link type="text/css" rel="stylesheet"  href="css/style.css">
+        <script src="https://kit.fontawesome.com/6014fdca0b.js" crossorigin="anonymous"></script>
+        <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+    </head>
+    <body>
+    <header>
+        <h1 class="web-title"><a class="header-link" href="index.html">Monkey Dev</a></h1>
+        <nav>
+            <a class="btn-nav" href="index.html">Inicio</a>
+            <a class="btn-nav" href="nosotros.html">Nosotros</a>
+            <a class="btn-nav" href="contacto.html">Contacto</a>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <h2 class="sect-title">Contacto</h2>
+            <img src="media/img/contact.jpg" width="50%" alt="Contacto">
+            <p class="sect-desc">Para comunicarte con nosotros podes <a href="mailto:ejemplo@ejemplo.com">Enviarnos un email</a> o completar el formulario de contacto.</p>
+            <h3 class="sect-subtitle">Formulario de contacto</h3>
+            <form class="form-cont" action="show_data.html" target=""_BLANK>
+                <label for="name">Nombre: </label> <input name="name" type="text" placeholder="Ingrese su nombre..." tabindex="1"><br>
+                <label for="lname">Apellido: </label><input name="lname" type="text" placeholder="Ingrese su apellido..." tabindex="2"><br>
+                <label for="email">Email: </label> <input name="email" type="email" placeholder="su@email.com" tabindex="3"><br>
+                <label for="phone">Telefono: </label><input name="phone" type="number" placeholder="Ingrese su celular..." tabindex="4"><br>
+                <label for="product">Elija las caracterisiticas de su sitio: </label> <input type="checkbox" name="product" value="web" tabindex="5"> Web Basica +  <input type="checkbox" name="product" value="blog" tabindex="6"> Blog +  <input type="checkbox" name="product" value="store" tabindex="7"> Tienda<br>
+                <label for="promo">Quiere recibir promociones en su email? </label> <input type="radio" name="promo" value="si" tabindex="8">Si  - <input type="radio" name="promo" value="no" tabindex="9">No <br><br>
+                <label for="comments">Comentarios adicionales: </label><br> <textarea name="comments" placeholder="Comentarios adicionales..." tabindex="10"></textarea><br>
+                <input type="submit" value="Enviar!" tabindex="11">
+            </form>
+        </article>
+    </main>
+    <footer>
+        <span><p>Copyright © 2020 - Lisandro Luna para <b>Curso de Desarrollo Full Stack Codo a Codo</b></p></span>
+    </footer>
+    </body>
 </html>
