--- a/index.html
+++ b/index.html
@@ -1,24 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Monkey Dev - Desarrollamos tus ideas!</title>
-    <link type="text/css" rel="stylesheet"  href="css/style.css">
-</head>
-<body>
-    <header>
-        <h1 class="web-title">Monkey Dev</h1>
-        <nav>
-            <a class="btn-nav" href="index.html">Inicio</a>
-            <a class="btn-nav" href="nosotros.html">Nosotros</a>
-            <a class="btn-nav" href="contacto.html">Contacto</a>
-        </nav>
-    </header>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Monkey Dev - Desarrollamos tus ideas!</title>
+        <link type="text/css" rel="stylesheet"  href="css/style.css">
+        <script src="https://kit.fontawesome.com/6014fdca0b.js" crossorigin="anonymous"></script>
+        <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+    </head>
+    <body>
+        <header>
+            <h1 class="web-title"><a class="header-link" href="index.html">Monkey Dev</a></h1>
+            <nav>
+                <a class="btn-nav" href="index.html">Inicio</a>
+                <a class="btn-nav" href="nosotros.html">Nosotros</a>
+                <a class="btn-nav" href="contacto.html">Contacto</a>
+            </nav>
+        </header>
+        <main>
+            <article class="home-desc">
+                <h2 class="sect-title">Diseño Web</h2>
+                <img src="media/img/web-banner.jpg" width="100%" alt="Diseño web">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at.</p>
+                <a href="web.html">Ver más...</a>
+            </article>
+            <article class="home-desc">
+                <h2 class="sect-title">Quienes Somos?</h2>
+                <img src="media/img/about.jpg" width="100%" alt="Quienes somos?">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at.</p>
+                <a href="nosotros.html">Ver más...</a>
+            </article>
+            <article class="home-desc">
+                <h2 class="sect-title">Contactanos</h2>
+                <img src="media/img/contact.jpg" width="100%" alt="Contacto">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at.</p>
+                <a href="contacto.html">Ver más...</a>
+            </article>
+        </main>
+        <footer>
+            <p>Copyright © 2020 - Lisandro Luna para <b>Curso de Desarrollo Full Stack Codo a Codo</b></p>
+            <a href="#"><i class="fab fa-facebook-square"></i></a>  <a href="#"><i class="fab fa-twitter-square"></i></a> <a href="#"><i class="fab fa-instagram"></i></a>
+        </footer>
+    </body>
 </html>
