--- a/nosotros.html
+++ b/nosotros.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Monkey Dev - Nosotros</title>
-    <link type="text/css" rel="stylesheet"  href="css/style.css">
-</head>
-<body>
-<header>
-    <h1 class="web-title">Monkey Dev</h1>
-    <nav>
-        <a class="btn-nav" href="index.html">Inicio</a>
-        <a class="btn-nav" href="nosotros.html">Nosotros</a>
-        <a class="btn-nav" href="contacto.html">Contacto</a>
-    </nav>
-</header>
-<main>
+    <head>
+        <meta charset="UTF-8">
+        <title>Monkey Dev - Nosotros</title>
+        <link type="text/css" rel="stylesheet"  href="css/style.css">
+        <script src="https://kit.fontawesome.com/6014fdca0b.js" crossorigin="anonymous"></script>
+        <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+    </head>
+    <body>
+    <header>
+        <h1 class="web-title"><a class="header-link" href="index.html">Monkey Dev</a></h1>
+        <nav>
+            <a class="btn-nav" href="index.html">Inicio</a>
+            <a class="btn-nav" href="nosotros.html">Nosotros</a>
+            <a class="btn-nav" href="contacto.html">Contacto</a>
+        </nav>
+    </header>
+        <main>
+            <article>
+                <h2 class="sect-title">Nosotros</h2>
+                <img src="media/img/about.jpg" width="50%" alt="Quienes somos?">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur elementum rutrum nibh ut iaculis. Fusce euismod vulputate ante, eu suscipit metus tincidunt at. Nulla at sem vel tellus gravida bibendum. In tristique feugiat urna, eget accumsan nunc congue ut. Integer eu ultricies lacus, in egestas lectus. Aliquam erat volutpat. Aliquam sit amet nisl maximus, lacinia leo eget, semper ex. Cras vel suscipit lectus. Sed tempus ante dignissim, lobortis ex eget, interdum tellus.
 
-</main>
-<footer>
+                    Praesent lacinia tellus ante, eget ornare tortor laoreet in. Nullam nec tempor nunc, ac mollis dolor. In ac sodales velit. Vestibulum ornare tincidunt ante, et commodo mi commodo et. Praesent maximus mi ac nulla accumsan vehicula. Phasellus sit amet tincidunt sem. Praesent sem ipsum, tristique ac fermentum non, auctor at neque. Sed at ex nec nulla sodales hendrerit. Vivamus sem neque, fermentum sit amet suscipit in, vestibulum in arcu. Cras vestibulum efficitur nunc, eu mollis sem aliquam eget. Proin vel lorem sapien. In ut rutrum nunc, eget scelerisque augue. Donec eros ipsum, pretium sed nisl ac, auctor vestibulum turpis.
 
-</footer>
-</body>
+                   </article>
+        </main>
+        <footer>
+            <span><p>Copyright © 2020 - Lisandro Luna para <b>Curso de Desarrollo Full Stack Codo a Codo</b></p></span>
+        </footer>
+    </body>
 </html>
