--- a/web.html
+++ b/web.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Monkey Dev - Diseño Web</title>
+        <meta name="viewport" content="width=device-width; initial-scale=1.0;">
         <link type="text/css" rel="stylesheet"  href="css/style.css">
         <script src="https://kit.fontawesome.com/6014fdca0b.js" crossorigin="anonymous"></script>
         <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
