--- a/contacto.html
+++ b/contacto.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Monkey Dev - Contacto</title>
-        <meta name="viewport" content="width=device-width; initial-scale=1.0;">
-        <link type="text/css" rel="stylesheet"  href="css/style.css">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link type="text/css" rel="stylesheet"  href="css/main.css">
         <script src="https://kit.fontawesome.com/6014fdca0b.js" crossorigin="anonymous"></script>
         <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     </head>
