--- a/index.html
+++ b/index.html
@@ -20,24 +20,26 @@
             </nav>
         </header>
         <main>
-            <article class="home-desc">
-                <h2 class="sect-title">Diseño Web</h2>
-                <img src="media/img/web-banner.jpg" width="100%" alt="Diseño web">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at.</p>
-                <a href="web.html">Ver más...</a>
-            </article>
-            <article class="home-desc">
-                <h2 class="sect-title">Quienes Somos?</h2>
-                <img src="media/img/about.jpg" width="100%" alt="Quienes somos?">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at.</p>
-                <a href="nosotros.html">Ver más...</a>
-            </article>
-            <article class="home-desc">
-                <h2 class="sect-title">Contactanos</h2>
-                <img src="media/img/contact.jpg" width="100%" alt="Contacto">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at.</p>
-                <a href="contacto.html">Ver más...</a>
-            </article>
+            <section class="grid-container">
+                <article class="home-desc grid-item">
+                    <h2 class="sect-title">Diseño Web</h2>
+                    <img src="media/img/web-banner.jpg" width="100%" alt="Diseño web">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at.</p>
+                    <a href="web.html">Ver más...</a>
+                </article>
+                <article class="home-desc grid-item">
+                    <h2 class="sect-title">Quienes Somos?</h2>
+                    <img src="media/img/about.jpg" width="100%" alt="Quienes somos?">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at.</p>
+                    <a href="nosotros.html">Ver más...</a>
+                </article>
+                <article class="home-desc grid-item">
+                    <h2 class="sect-title">Contactanos</h2>
+                    <img src="media/img/contact.jpg" width="100%" alt="Contacto">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at.</p>
+                    <a href="contacto.html">Ver más...</a>
+                </article>
+            </section>
         </main>
         <footer>
             <p>Copyright © 2020 - Lisandro Luna para <b>Curso de Desarrollo Full Stack Codo a Codo</b></p>
