Mejoras de diseño.

--- a/index.html
+++ b/index.html
@@ -20,26 +20,48 @@
             </nav>
         </header>
         <main>
-            <section class="grid-container">
-                <article class="home-desc grid-item">
+            <article class="grid-head">
+                <section class="grid-h-item">
+                    <img src="media/img/design.svg" alt="Llevamos tus ideas al codigo!!">
+                </section>
+                <section class="grid-h-item">
+                    <br>
+                    <br>
+                    <h2>Llevamos tus ideas al codigo!</h2>
+                    <div>
+                        <p>Tu sitio personal, el de tu emprendimiento o el de tu empresa es posible con nosotros.</p>
+                        <ul>
+                            <li>100% Responsive</li>
+                            <li>Mantenimiento por 1 año</li>
+                            <li>Diseños completamente originales</li>
+                            <li>El mejor Soporte Tecnico</li>
+                            <li>Asistencia en el manejo de redes sociales</li>
+                        </ul>
+                    </div>
+                    <br/>
+                    <h3 class="text-center">Cotiza tu desarrollo YA!</h3>
+                </section>
+            </article>
+            <article class="grid-container">
+                <section class="home-desc grid-item">
                     <h2 class="sect-title">Diseño Web</h2>
                     <img src="media/img/web-banner.jpg" width="100%" alt="Diseño web">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at.</p>
                     <a href="web.html">Ver más...</a>
-                </article>
-                <article class="home-desc grid-item">
+                </section>
+                <section class="home-desc grid-item">
                     <h2 class="sect-title">Quienes Somos?</h2>
                     <img src="media/img/about.jpg" width="100%" alt="Quienes somos?">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at.</p>
                     <a href="nosotros.html">Ver más...</a>
-                </article>
-                <article class="home-desc grid-item">
+                </section>
+                <section class="home-desc grid-item">
                     <h2 class="sect-title">Contactanos</h2>
                     <img src="media/img/contact.jpg" width="100%" alt="Contacto">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at.</p>
                     <a href="contacto.html">Ver más...</a>
-                </article>
-            </section>
+                </section>
+            </article>
         </main>
         <footer>
             <p>Copyright © 2020 - Lisandro Luna para <b>Curso de Desarrollo Full Stack Codo a Codo</b></p>
