--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,7 @@
             </nav>
         </header>
         <main>
-            <article>
+            <section>
                 <h2 class="sect-title">Contacto</h2>
                 <img src="media/img/contact.jpg" width="50%" alt="Contacto">
                 <p class="sect-desc">Para comunicarte con nosotros podes <a href="mailto:ejemplo@ejemplo.com">Enviarnos un email</a> o completar el formulario de contacto.</p>
@@ -35,7 +35,7 @@
                     <label for="comments">Comentarios adicionales: </label><br> <textarea name="comments" placeholder="Comentarios adicionales..." tabindex="10"></textarea><br>
                     <input type="submit" value="Enviar!" tabindex="11">
                 </form>
-            </article>
+            </section>
         </main>
         <footer>
             <span><p>Copyright © 2020 - Lisandro Luna para <b>Curso de Desarrollo Full Stack Codo a Codo</b></p></span>
