--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             </nav>
         </header>
         <main>
-            <article class="grid-head">
-                <section class="grid-h-item">
+            <section class="grid-head">
+                <article class="grid-h-item">
                     <img src="media/img/design.svg" alt="Llevamos tus ideas al codigo!!">
-                </section>
-                <section class="grid-h-item">
+                </article>
+                <article class="grid-h-item">
                     <br>
                     <br>
                     <h2>Llevamos tus ideas al codigo!</h2>
@@ -40,28 +40,28 @@
                     </div>
                     <br/>
                     <h3 class="text-center">Cotiza tu desarrollo YA!</h3>
-                </section>
-            </article>
-            <article class="grid-container">
-                <section class="home-desc grid-item">
+                </article>
+            </section>
+            <section class="grid-container">
+                <article class="home-desc grid-item">
                     <h2 class="sect-title">Diseño Web</h2>
                     <img src="media/img/web-banner.jpg" width="100%" alt="Diseño web">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at.</p>
                     <a href="web.html">Ver más...</a>
-                </section>
-                <section class="home-desc grid-item">
+                </article>
+                <article class="home-desc grid-item">
                     <h2 class="sect-title">Quienes Somos?</h2>
                     <img src="media/img/about.jpg" width="100%" alt="Quienes somos?">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at.</p>
                     <a href="nosotros.html">Ver más...</a>
-                </section>
-                <section class="home-desc grid-item">
+                </article>
+                <article class="home-desc grid-item">
                     <h2 class="sect-title">Contactanos</h2>
                     <img src="media/img/contact.jpg" width="100%" alt="Contacto">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at.</p>
                     <a href="contacto.html">Ver más...</a>
-                </section>
-            </article>
+                </article>
+            </section>
         </main>
         <footer>
             <p>Copyright © 2020 - Lisandro Luna para <b>Curso de Desarrollo Full Stack Codo a Codo</b></p>
