--- a/web.html
+++ b/web.html
@@ -20,7 +20,7 @@
             </nav>
         </header>
         <main>
-            <article>
+            <section>
                 <h2 class="sect-title">Diseño de sitio Web</h2>
                 <img class="sect-img" src="media/img/web-banner.jpg" alt="Diseño Web" width="50%"/>
                 <p class="sect-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at. Sed nec orci non libero maximus mollis. Pellentesque quis purus massa. Nam convallis iaculis bibendum. Sed justo elit, dapibus sed semper eget, cursus mollis urna. Vestibulum ante ipsum primis in faucibus orci luctus.</p>
@@ -51,7 +51,7 @@
                     <li>Diseño apto para celulares</li>
                     <li>Mantenimiento por un año</li>
                 </ul>
-            </article>
+            </section>
         </main>
         <footer>
             <span><p>Copyright © 2020 - Lisandro Luna para <b>Curso de Desarrollo Full Stack Codo a Codo</b></p></span>
