--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     </head>
     <body>
         <header>
-            <h1 class="web-title"><a class="header-link" href="index.html">Monkey Dev</a></h1>
+            <h1 class="web-title"><a class="header-link" href="index.html">Monkey Dev</a> <i class="fas fa-code"></i></h1>
             <nav>
                 <a class="btn-nav" href="index.html">Inicio</a>
                 <a class="btn-nav" href="nosotros.html">Nosotros</a>
+                <a class="btn-nav" href="proyectos.html">Proyectos</a>
                 <a class="btn-nav" href="contacto.html">Contacto</a>
             </nav>
         </header>
