--- a/contacto.html
+++ b/contacto.html
@@ -16,13 +16,14 @@
             <nav>
                 <a class="btn-nav" href="index.html">Inicio</a>
                 <a class="btn-nav" href="nosotros.html">Nosotros</a>
+                <a class="btn-nav" href="proyectos.html">Proyectos</a>
                 <a class="btn-nav" href="contacto.html">Contacto</a>
             </nav>
         </header>
         <main>
             <section>
                 <h2 class="sect-title">Contacto</h2>
-                <img src="media/img/contact.jpg" width="50%" alt="Contacto">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d210147.39707532423!2d-58.573384947565984!3d-34.615461116377574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1600720043319!5m2!1ses-419!2sar" width="1300" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 <p class="sect-desc">Para comunicarte con nosotros podes <a href="mailto:ejemplo@ejemplo.com">Enviarnos un email</a> o completar el formulario de contacto.</p>
                 <h3 class="sect-subtitle">Formulario de contacto</h3>
                 <form class="form-cont" action="show_data.html" target=""_BLANK>
