--- a/nosotros.html
+++ b/nosotros.html
@@ -16,6 +16,7 @@
             <nav>
                 <a class="btn-nav" href="index.html">Inicio</a>
                 <a class="btn-nav" href="nosotros.html">Nosotros</a>
+                <a class="btn-nav" href="proyectos.html">Proyectos</a>
                 <a class="btn-nav" href="contacto.html">Contacto</a>
             </nav>
         </header>
