--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-            <h1 class="web-title"><a class="header-link" href="index.html">Monkey Dev</a></h1>
+            <h1 class="web-title"><a class="header-link" href="index.html">Monkey Dev</a> <i class="fas fa-code"></i></h1>
             <nav>
                 <a class="btn-nav" href="index.html">Inicio</a>
                 <a class="btn-nav" href="nosotros.html">Nosotros</a>
