--- a/web.html
+++ b/web.html
@@ -21,37 +21,47 @@
             </nav>
         </header>
         <main>
-            <section>
-                <h2 class="sect-title">Diseño de sitio Web</h2>
-                <img class="sect-img" src="media/img/web-banner.jpg" alt="Diseño Web" width="50%"/>
-                <p class="sect-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at. Sed nec orci non libero maximus mollis. Pellentesque quis purus massa. Nam convallis iaculis bibendum. Sed justo elit, dapibus sed semper eget, cursus mollis urna. Vestibulum ante ipsum primis in faucibus orci luctus.</p>
+            <section class="grid-web">
+                <article class="grid-w-item">
+                <img src="media/img/web-banner.jpg" alt="Diseño Web"/>
+                </article>
+                <article class="grid-w-item">
+                    <h2 class="sect-title">Diseño de sitio Web</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at. Sed nec orci non libero maximus mollis. Pellentesque quis purus massa. Nam convallis iaculis bibendum. Sed justo elit, dapibus sed semper eget, cursus mollis urna. Vestibulum ante ipsum primis in faucibus orci luctus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at. Sed nec orci non libero maximus mollis. Pellentesque quis purus massa. Nam convallis iaculis bibendum. Sed justo elit, dapibus sed semper eget, cursus mollis urna. Vestibulum ante ipsum primis in faucibus orci luctus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie eros arcu, sed pretium neque semper at. Sed nec orci non libero maximus mollis. Pellentesque quis purus massa. Nam convallis iaculis bibendum. Sed justo elit, dapibus sed semper eget, cursus mollis urna. Vestibulum ante ipsum primis in faucibus orci luctus.</p>
+                </article>
+                <article class="grid-w-item">
                 <h3 class="sect-subtitle">Precios de referencia:</h3>
-                <table>
-                    <tr>
-                        <td>Tipo de sitio</td>
-                        <td>Precio Aproximado</td>
-                    </tr>
-                    <tr>
-                        <td>Web Simple - 5 Secciones</td>
-                        <td>$123456789*</td>
-                    </tr>
-                    <tr>
-                        <td>Web + Blog - 5 Secciones</td>
-                        <td>$123456789*</td>
-                    </tr>
-                    <tr>
-                        <td>Web + Ecommerce - 5 Secciones</td>
-                        <td>$123456789*</td>
-                    </tr>
-                </table>
-                <p><small><b>*El precio puede variar de acuerdo al nivel de personalizacion del sitio.</b></small></p>
-                <h3>Todos los sitios incluyen:</h3>
-                <ul>
-                    <li>Links a Redes Sociales</li>
-                    <li>Formulario de Contacto</li>
-                    <li>Diseño apto para celulares</li>
-                    <li>Mantenimiento por un año</li>
-                </ul>
+                    <table>
+                        <tr>
+                            <td>Tipo de sitio</td>
+                            <td>Precio Aproximado</td>
+                        </tr>
+                        <tr>
+                            <td>Web Simple - 5 Secciones</td>
+                            <td>$123456789*</td>
+                        </tr>
+                        <tr>
+                            <td>Web + Blog - 5 Secciones</td>
+                            <td>$123456789*</td>
+                        </tr>
+                        <tr>
+                            <td>Web + Ecommerce - 5 Secciones</td>
+                            <td>$123456789*</td>
+                        </tr>
+                    </table>
+                    <p><small><b>*El precio puede variar de acuerdo al nivel de personalizacion del sitio.</b></small></p>
+                </article>
+                <article class="grid-w-item">
+                    <h3>Todos los sitios incluyen:</h3>
+                    <ul>
+                        <li>Links a Redes Sociales</li>
+                        <li>Formulario de Contacto</li>
+                        <li>Diseño apto para celulares</li>
+                        <li>Mantenimiento por un año</li>
+                    </ul>
+                </article>
             </section>
         </main>
         <footer>
