--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </ul>
                     </div>
                     <br/>
-                    <h3 class="text-center">Cotiza tu desarrollo YA!</h3>
+                    <h3 class="text-center"><a href="web.html">Cotiza tu desarrollo YA!</a></h3>
                 </article>
             </section>
             <section class="grid-container">
